--- a/Wpf/Views/MainWindow.xaml
+++ b/Wpf/Views/MainWindow.xaml
@@ -49,7 +49,7 @@
             <Button Command="{Binding AboutCommand}" Content="{materialDesign:PackIcon Information}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="25" Height="25" Margin="0,0,5,0" ToolTip="Information" Style="{StaticResource MaterialDesignFloatingActionAccentButton}"/>
             <Button Command="{Binding SettingCommand}" Content="{materialDesign:PackIcon Settings}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="25" Height="25" Margin="5,0,0,0" ToolTip="Setting" Style="{StaticResource MaterialDesignFloatingActionButton}"/>
         </StackPanel>
-        <Button Command="{Binding SetWallpaperCommand}" IsEnabled="False" Content="Set Wallpaper" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="125"  Style="{StaticResource MaterialDesignRaisedAccentButton}" />
+        <Button Command="{Binding SetWallpaperCommand}" Content="Set Wallpaper" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="125"  Style="{StaticResource MaterialDesignRaisedAccentButton}" />
 
     </Grid>
 </Window>
