--- a/Wpf/Views/SettingWindow.xaml
+++ b/Wpf/Views/SettingWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
         DataContext="{Binding Source={StaticResource Locator}, Path=SettingViewModel}"
-        helpers:CloseCommand.CloseCommand="{Binding CloseWindowFlag}"
+        helpers:CloseAction.CloseCommand="{Binding CloseWindowFlag}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
