--- a/Wpf/Views/MainWindow.xaml
+++ b/Wpf/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Wpf.Views.MainWindow" WindowStartupLocation="CenterScreen"
+<Window x:Class="Wpf.Views.MainWindow" WindowStartupLocation="CenterScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -47,10 +47,10 @@
 
         <Button Command="{Binding CloseCommand}" Content="Close" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Style="{StaticResource MaterialDesignRaisedLightButton}" />
         <StackPanel Orientation="Horizontal" Margin="0,125,0,0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-            <Button Command="{Binding AboutCommand}" Content="{materialDesign:PackIcon Information}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="25" Height="25" Margin="0,0,5,0" ToolTip="Information" Style="{StaticResource MaterialDesignFloatingActionAccentButton}"/>
+            <Button Command="{Binding AboutCommand}" Content="{materialDesign:PackIcon Information}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="25" Height="25" Margin="0,0,5,0" ToolTip="Information" Style="{StaticResource MaterialDesignFloatingActionSecondaryButton}"/>
             <Button Command="{Binding SettingCommand}" Content="{materialDesign:PackIcon Settings}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="25" Height="25" Margin="5,0,0,0" ToolTip="Setting" Style="{StaticResource MaterialDesignFloatingActionButton}"/>
         </StackPanel>
-        <Button Command="{Binding SetWallpaperCommand}" Content="Set Wallpaper" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="125"  Style="{StaticResource MaterialDesignRaisedAccentButton}" />
+        <Button Command="{Binding SetWallpaperCommand}" Content="Set Wallpaper" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="125"  Style="{StaticResource MaterialDesignRaisedSecondaryButton}" />
 
     </Grid>
 </Window>
