--- a/Wpf/Views/SettingWindow.xaml
+++ b/Wpf/Views/SettingWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Wpf.Views.SettingWindow" WindowStartupLocation="CenterScreen"
+<Window x:Class="Wpf.Views.SettingWindow" WindowStartupLocation="CenterScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -37,7 +37,7 @@
         </Grid>
 
         <Button Command="{Binding CloseCommand}" Content="Close" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Style="{StaticResource MaterialDesignRaisedLightButton}" />
-        <Button Command="{Binding SaveCommand}" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="100"  Style="{StaticResource MaterialDesignRaisedAccentButton}" />
+        <Button Command="{Binding SaveCommand}" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="100"  Style="{StaticResource MaterialDesignRaisedSecondaryButton}" />
 
     </Grid>
 </Window>
